k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-backend-service
  namespace: blog
  labels:
    app: blog-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: blog-backend
