k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-backend-ingress
  namespace: blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - bapi.ingasti.com
      secretName: bapi-ingasti-tls
  rules:
    - host: bapi.ingasti.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-backend-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-frontend-ingress
  namespace: blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - bedtime.ingasti.com
      secretName: blog-ingasti-tls
  rules:
    - host: bedtime.ingasti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-frontend-service
                port:
                  number: 80
